# app-review-sentiment-anslysis-using-bert

./: .gitignore  README.md  pyproject.toml
data/data/: app_data.csv
notebooks/: _data_collection.ipynb  data_preprocessing.ipynb  sentiment_analysis_bert.ipynb
src/: config.py  start_server.sh
src/app/: api.py
src/data/: data_loader.py  dataset.py
src/models/: model.py  sentiment_classifier.py  train.py  utils.py
